# astrowidget

./: .gitignore  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  vite.config.js
.claude/commands/: release.md
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: index.md
docs/api/: data-io.md  sky-viewer.md  sky-widget.md
docs/architecture/: data-pipeline.md  decisions.md  overview.md  webgl-renderer.md
docs/guides/: development.md  getting-started.md  hips-backgrounds.md  ovro-lwa.md
examples/: 01_basic.ipynb
js/: colormap.js  inline_widget.js  interaction.js  projection.js  renderer.js  widget.js
scripts/: sync_zenodo.py
src/astrowidget/: __init__.py  cube.py  io.py  viewer.py  wcs.py  widget.py
src/astrowidget/static/: widget.js  widget.js.map
tests/: generate_test_vectors.py  test_background.py  test_controls.py  test_cube.py  test_io.py  test_sync_zenodo.py  test_viewer.py  test_widget.py
tests/fixtures/: projection_vectors.json
tests/js/: projection.test.js
